--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/drawer": "^7.0.1",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
@@ -17,13 +18,9 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-
-    
-
     "react-native-gesture-handler": "^2.20.2",
     "react-native-reanimated": "^3.16.1",
-    "react-native-safe-area-context": "^4.10.5",
-
+    "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.0.0"
   },
   "devDependencies": {
