--- a/package.json
+++ b/package.json
@@ -14,19 +14,22 @@
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
+    "@reduxjs/toolkit": "^2.4.0",
     "@types/react": "~18.2.79",
-    "expo": "~51.0.28",
+    "expo": "^52.0.6",
+    "expo-camera": "~15.0.16",
     "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^11.0.2",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-image-picker": "^7.1.2",
-    "react-native-reanimated": "^3.10.1",
+    "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.0.0",
-    "typescript": "~5.3.3",
-    "expo-camera": "~15.0.16"
+    "react-redux": "^9.1.2",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
