--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^7.0.1",
     "@react-navigation/native": "^7.0.0",
@@ -29,6 +30,7 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^4.1.0",
     "react-redux": "^9.1.2",
+    "redux-thunk": "^3.1.0",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
