--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^19.0.0",
+    "@react-native-firebase/auth": "^19.0.0",
+    "@react-native-firebase/firestore": "^19.0.0",
     "@react-navigation/drawer": "^7.0.1",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
@@ -19,9 +22,13 @@
     "@types/react": "^18.3.12",
     "expo": "^52.0.6",
     "expo-camera": "16.0.9",
+    "expo-dev-client": "~5.0.6",
+    "expo-file-system": "~18.0.6",
+    "expo-image-manipulator": "^13.0.5",
     "expo-image-picker": "16.0.3",
     "expo-status-bar": "2.0.0",
     "firebase": "^11.0.2",
+    "pod-install": "^0.3.2",
     "react": "^18.3.1",
     "react-native": "^0.76.3",
     "react-native-gesture-handler": "^2.20.2",
