--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@types/react": "^18.3.12",
     "expo": "^52.0.6",
     "expo-camera": "16.0.9",
+    "expo-image-manipulator": "^13.0.5",
     "expo-image-picker": "16.0.3",
     "expo-status-bar": "2.0.0",
     "firebase": "^11.0.2",
     "react": "^18.3.1",
     "react-native": "^0.76.3",
+    "react-native-calendars": "^1.1307.0",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-image-picker": "^7.1.2",
+    "react-native-pager-view": "^6.6.1",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^4.1.0",
