--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/drawer": "^7.0.1",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
@@ -24,16 +26,27 @@
     "expo-status-bar": "2.0.0",
     "firebase": "^11.0.2",
     "react": "^18.3.1",
+    "react-dom": "18.2.0",
     "react-native": "^0.76.3",
-    "react-native-calendars": "^1.1307.0",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-file-access": "^3.1.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.20.2",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-pager-view": "^6.6.1",
+    "react-native-paper": "^5.12.5",
+    "react-native-pdf": "^6.7.6",
+    "react-native-print": "^0.11.0",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^4.1.0",
+    "react-native-share": "^12.0.3",
+    "react-native-view-shot": "^4.0.3",
+    "react-native-webview": "^13.12.5",
     "react-redux": "^9.1.2",
     "redux-thunk": "^3.1.0",
+    "styled-components": "^5.3.10",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
