--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-file-access": "^3.1.1",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.20.2",
+    "react-native-gifted-chat": "^2.6.4",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-pager-view": "^6.6.1",
@@ -50,7 +51,8 @@
     "typescript": "~5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "expo-module-scripts": "^4.0.2"
   },
   "private": true
 }
